kubernetes/app/ratings.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ratings
  name: ratings
spec:
  ports:
  - name: http
    port: 3002
    targetPort: 8080
  selector:
    io.kompose.service: ratings
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ratings
  name: ratings
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ratings
  template:
    metadata:
      labels:
        io.kompose.service: ratings
    spec:
      containers:
      - env:
        - name: KTOR_ENV
          value: prod
        - name: MessageQueueSettings__Hostname
          value: message-queue
        - name: MessageQueueSettings__Password
          value: guest
        - name: MessageQueueSettings__Username
          value: guest
        - name: db__jdbcUrl
          value: "jdbc:mysql://mysql-ratingdb:3306/ratings"
        - name: db__password
          value: helloworld
        - name: db__username
          value: root
        image: ratings:dev
        name: ratings
        ports:
        - containerPort: 8080
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ratings
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-test-auth@kubernetescrd
  labels:
    io.kompose.service: ratings
spec:
  rules:
    - http:
        paths:
          - path: /api/public/EpisodeRatings
            pathType: Prefix
            backend:
              service: 
                name: ratings
                port:
                  name: http
          - path: /api/public/SeriesRatings
            pathType: Prefix
            backend:
              service: 
                name: ratings
                port:
                  name: http
          - path: /api/protected/EpisodeRatings
            pathType: Prefix
            backend:
              service: 
                name: ratings
                port:
                  name: http
          - path: /api/protected/SeriesRatings
            pathType: Prefix
            backend:
              service: 
                name: ratings
                port:
                  name: http
