kubernetes/app/series-and-episodes.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: series-and-episodes
  name: series-and-episodes
spec:
  ports:
  - name: http
    port: 3001
    targetPort: 80
  selector:
    io.kompose.service: series-and-episodes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: series-and-episodes
  name: series-and-episodes
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: series-and-episodes
  template:
    metadata:
      labels:
        io.kompose.service: series-and-episodes
    spec:
      containers:
      - env:
        - name: MessageQueueSettings__Hostname
          value: message-queue
        - name: MessageQueueSettings__Password
          value: guest
        - name: MessageQueueSettings__Username
          value: guest
        - name: SeriesDbSettings__ConnectionString
          value: mongodb://root:rootpassword@mongodb-seriesdb:27017
        - name: SeriesDbSettings__DatabaseName
          value: SeriesDb
        - name: SeriesDbSettings__SeriesCollectionName
          value: Series
        - name: TokenSettings__Audience
          value: http://localhost:80
        - name: TokenSettings__Issuer
          value: http://localhost:80
        - name: TokenSettings__Secret
          value: A_long_enough_secret_text_which_is_not_too_short_unless_there_will_be_an_error
        image: series-and-episodes:dev
        name: series-and-episodes
        ports:
        - containerPort: 80
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: series-and-episodes
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-test-auth@kubernetescrd
  labels:
    io.kompose.service: series-and-episodes
spec:
  rules:
    - http:
        paths:
          - path: /api/admin/Series
            pathType: Prefix
            backend:
              service: 
                name: series-and-episodes
                port:
                  name: http
          - path: /api/admin/Images
            pathType: Prefix
            backend:
              service: 
                name: series-and-episodes
                port:
                  name: http
          - path: /api/public/Series
            pathType: Prefix
            backend:
              service: 
                name: series-and-episodes
                port:
                  name: http
          - path: /api/public/Images
            pathType: Prefix
            backend:
              service: 
                name: series-and-episodes
                port:
                  name: http
